--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   file_picker: ^3.0.0-nullsafety.2
   unorm_dart: ^0.2.0
   permission_handler: ^5.0.1+1
+  animate_do: ^2.0.0
 
 dev_dependencies:
   flutter_test:
